# adventureworks_dwh_analysis

./: .dockerignore  .env  .env.template  .gitignore  Makefile  README.md  db.sql  docker-compose.yaml  generate_bronze_models.sh  generate_silver_models.sh  setting_clouddbeaver.sql  sync_duckdb.ps1  sync_duckdb.sh
PowerBI/: Sales Dashboard.pbix
PowerBI/adw_parquet_data/: dim_adventureworks_internet_customer.parquet  dim_adventureworks_location.parquet  dim_adventureworks_reseller_customer.parquet  dim_adventureworks_ship_method.parquet  dim_adventureworks_vendor.parquet  dim_date.parquet  (+4 more)
dagster_home/: dagster.yaml  workspace.yaml
dashboard_wireframes/: 00_business_questions_assessment.md  manufacturing_operations_dashboard.md  overall_scm_dashboard.md  purchasing_efficiency_dashboard.md  sales_performance_dashboard.md  scm_cost_deep_dive_dashboard.md
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docker/: Dockerfile  requirements.txt
docs/: adventureworks-schema.dbml  bus-matrix.md  business-requirements.md  dc_dockercompose.md  dc_dockerfile.md  local_run_dagster.md  setup_dbt_dagster_docker.md
etl_pipeline/: README.md  pyproject.toml
etl_pipeline/src/etl_pipeline/: definitions.py
etl_pipeline/src/etl_pipeline/defs/: __init__.py
etl_pipeline/src/etl_pipeline/defs/dbt/: __init__.py  assets.py  resources.py
etl_pipeline/src/etl_pipeline/defs/ingest_data/: __init__.py  postgres_ingestion_assets.py  seaweedfs_io_manager.py
etl_pipeline/src/etl_pipeline/lib_custom/dbt/: translator.py
(+205 files in other folders)
