[project]
name = "etl_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.10",
    "dagster-dbt>=0.28.10",
    "dagster-postgres>=0.28.10",
    "dagster-webserver>=1.12.10",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "dbt-postgres>=1.10.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "s3fs>=2026.1.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl_pipeline"
registry_modules = [
    "etl_pipeline.components.*",
]


